changed configuration from xml to annotations

--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.github.kastyan</groupId>
-    <artifactId>slownewsspringmvc</artifactId>
+    <artifactId>personalnews</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SlowNewsSpringMVC</name>
+    <name>PersonalNews</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,6 +24,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>4.2.2.RELEASE</version>
+        </dependency>
+		<!-- View -->
+		<dependency>
+			  <groupId>org.thymeleaf</groupId>
+			  <artifactId>thymeleaf-spring4</artifactId>
+			  <version>2.1.4.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
